# partitioned-filters

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  requirements.txt
benchmark/: CMakeLists.txt  benchmark.cpp.template  benchmark.schema.json  benchmark_config.hpp  main.hpp  perfbenchmark.hpp
benchmark/fixture/: fixture.hpp  fixture_base.hpp  fixture_construct.hpp  fixture_contains.hpp  fixture_count.hpp  fixture_fpr.hpp  fixture_mtcount.hpp  fixture_partitioning.hpp
benchmark/generator/: data_container.hpp  generator.hpp  generator_base.hpp  generator_prime.hpp  generator_random.hpp  generator_random_huge.hpp  generator_random_huge2.hpp  generator_sequential.hpp  generator_skew.hpp
benchmark/paper/background/bloom/: bloom_fpr.csv  bloom_fpr.json
benchmark/paper/experiments/bloom/: bloom_count_100m-1.csv  bloom_count_100m-1.json  bloom_count_100m-2.csv  bloom_count_100m-2.json  bloom_count_100m-3.csv  bloom_count_100m-3.json  bloom_count_100m.csv  bloom_count_100m.json  bloom_count_10k.csv  bloom_count_10k.json  bloom_count_1m.csv  bloom_count_1m.json
benchmark/paper/experiments/bloom_part/: bloom_construct_mt_part_100m.csv  bloom_construct_mt_part_100m.json  bloom_construct_mt_part_1m.csv  bloom_construct_mt_part_1m.json  bloom_count_part_100m_blocked.csv  bloom_count_part_100m_blocked.json  bloom_count_part_100m_grouped.csv  bloom_count_part_100m_grouped.json  bloom_count_part_100m_naive.csv  bloom_count_part_100m_naive.json  bloom_count_part_100m_sectorized.csv  bloom_count_part_100m_sectorized.json  bloom_count_part_1m.json
benchmark/paper/experiments/competitors/: competitors_bsd_construct.csv  competitors_bsd_construct.json  competitors_bsd_count.csv  competitors_bsd_count.json  competitors_cuckoo_construct.csv  competitors_cuckoo_construct.json  competitors_cuckoo_count.csv  competitors_xor_count.csv  (+8 more)
benchmark/paper/introduction/: bloom_blocked_stacked_construct.csv  bloom_blocked_stacked_construct.json  bloom_blocked_stacked_count.csv  bloom_blocked_stacked_count.json  bloom_sectorized_stacked_construct.csv  bloom_sectorized_stacked_construct.json  bloom_sectorized_stacked_count.csv  bloom_sectorized_stacked_count.json  cuckoo_stacked_construct.csv  cuckoo_stacked_construct.json  cuckoo_stacked_count.csv  cuckoo_stacked_count.json  morton_stacked_construct.csv  morton_stacked_construct.json  morton_stacked_count.csv  morton_stacked_count.json  xor_stacked_construct.csv  xor_stacked_construct.json  xor_stacked_count.csv  xor_stacked_count.json
benchmark/paper/perfopt/: bloom_blocked.json  bloom_grouped.json  bloom_naive.json  bloom_sectorized.json  bloom_sectorized_vertical.json  cuckoo.json  fuse.json  morton.json  xor.json
lib/bsd/: CMakeLists.txt  README.md
src/: CMakeLists.txt  filter.hpp  filter_base.hpp  filter_factory.hpp  filter_factory_base.hpp  filter_pointer.hpp
src/address/: addresser.hpp  addresser_base.hpp  addresser_lemire.hpp  addresser_magic.hpp  addresser_morton.hpp  addresser_power_of_two.hpp  addresser_vacuum.hpp
src/bloom/: bloom_filter.hpp  bloom_filter_factory.hpp  bloom_parameter.hpp
src/bloom/construct/: bloom_construct.hpp  bloom_construct_base.hpp  bloom_construct_horizontal.hpp  bloom_construct_naive.hpp  bloom_construct_vertical.hpp
src/bloom/container/: bloom_container.hpp
src/bloom/count/: bloom_count.hpp  bloom_count_base.hpp  bloom_count_horizontal.hpp  bloom_count_naive.hpp  bloom_count_vertical.hpp
src/bloom/mask/: bloom_mask.hpp  bloom_mask_base.hpp  bloom_mask_blocked.hpp  bloom_mask_grouped.hpp  bloom_mask_helper.hpp  bloom_mask_sectorized.hpp  bloom_mask_sectorized_vertical.hpp
src/compiler/: compiler_hints.hpp
src/cuckoo/: cuckoo_filter.hpp  cuckoo_filter_factory.hpp  cuckoo_parameter.hpp
src/cuckoo/container/: cuckoo_container.hpp  cuckoo_container_base.hpp  cuckoo_container_compressed.hpp  cuckoo_container_retry.hpp  cuckoo_container_standard.hpp  cuckoo_helper.hpp
src/hash/: hash.hpp  hasher.hpp  hasher_base.hpp  hasher_cityhash.hpp  hasher_fasthash.hpp  hasher_identity.hpp  hasher_mul.hpp  hasher_murmur.hpp  hasher_two_independent_multiply_shift.hpp  seed.hpp
src/math/: math.hpp
src/parameter/: parameter.hpp
src/partition/: cache_line_buffer.hpp  partition_set.hpp
src/random/: random.hpp
src/reference/amd_mortonfilter/: amd_mortonfilter_filter.hpp  amd_mortonfilter_parameter.hpp
src/reference/bsd/: bsd_filter.hpp
src/reference/efficient_cuckoofilter/: efficient_cuckoofilter_filter.hpp  efficient_cuckoofilter_parameter.hpp
src/reference/fastfilter/: fastfilter_filter.hpp
src/reference/impala/: impala_bloom_filter.hpp  impala_bloom_parameter.hpp
src/reference/vacuumfilter/: vacuumfilter_filter.hpp  vacuumfilter_parameter.hpp
src/simd/: helper.hpp  vector.hpp  vector_div.hpp
src/task/: barrier.hpp  task_queue.hpp
src/xor/: xor_filter.hpp  xor_filter_factory.hpp  xor_parameter.hpp
src/xor/container/: xor_container.hpp  xor_helper.hpp  xor_queue.hpp  xor_set.hpp  xor_stack.hpp
test/: CMakeLists.txt  div_mod_test.hpp  filter_pointer_test.hpp  filter_test.hpp  tester.cpp  tester.hpp
test/amd_mortonfilter/: amd_mortonfilter_test.cpp  amd_mortonfilter_test.hpp
test/bloom/: bloom_filter_pointer_test.cpp  bloom_filter_pointer_test.hpp  bloom_filter_test.cpp  bloom_filter_test.hpp
test/bsd/: bsd_bloom_filter_test.cpp  bsd_bloom_filter_test.hpp  bsd_cuckoo_filter_test.cpp  bsd_cuckoo_filter_test.hpp
test/cuckoo/: cuckoo_filter_pointer_test.cpp  cuckoo_filter_pointer_test.hpp  cuckoo_filter_test.cpp  cuckoo_filter_test.hpp
test/div/: div_test.cpp  div_test.hpp
test/efficient_cuckoofilter/: efficient_cuckoofilter_test.cpp  efficient_cuckoofilter_test.hpp
test/fastfilter/: fastfilter_test.cpp  fastfilter_test.hpp
test/impala/: impala_test.cpp  impala_test.hpp
test/morton/: morton_filter_test.cpp  morton_filter_test.hpp  morton_ota_filter_test.cpp  morton_ota_filter_test.hpp
test/vacuumfilter/: vacuumfilter_test.cpp  vacuumfilter_test.hpp
test/xor/: xor_filter_pointer_test.cpp  xor_filter_pointer_test.hpp  xor_filter_test.cpp  xor_filter_test.hpp
(+213 files in other folders)
